--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Leo's Blog
+title: Leo Blog
 SEOTitle: 叶飞的博客 | Yefei Zha Blog
 header-img: img/post-bg-desk.jpg
 email: zhayefei@gmail.com
