--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ disqus_username: zhayefei
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: 1d598a523866ac45d906                           #生成的clientID
+  clientSecret: fac7a7f9acf5b32eef914e9af8641af5ec322e31    #生成的clientSecret
+  repo: zhayefei.github.io    #仓库名称
+  owner: zhayefei    #github用户名
+  admin: zhayefei
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
