--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/zhayefei/zhayefei.github.io.git" # you code rep
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "stay hungry, stay foolish"
-sidebar-avatar: /img/jd_lake.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/me_punket.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
